changement de l'index

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <h4 class="my-0 font-weight-normal">En trois fois</h4>
                         </div>
                         <div class="card-body">
-                            <h1 class="card-title pricing-card-title">7$</h1>
+                            <h1 class="card-title pricing-card-title">7$ <small class="text-muted">/ mo</small></h1>
                             <ul class="list_unstyle" class="mt-3 md-4">
                                 <li>Le kiff</li>
                                 <li>À Bali</li>
